# typebitset

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  list.rs  rel.rs
